--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS373 Spring 2017: Jaime Munoz
+name: CS373 Spring 2017 Jaime Munoz
 
 # Short bio or description (displayed in the header)
 description: Weekly Blog for Software Engineering
